--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -109,9 +109,9 @@
       <h2>Addresses</h2>
       <p>Customer shipping addresses</p>
     </div>
-    <div class="card" tabindex="0" onclick="openTable('Cart')">
-      <h2>Cart</h2>
-      <p>Users’ shopping carts</p>
+    <div class="card" tabindex="0" onclick="openTable('Coupons')">
+      <h2>Coupons</h2>
+      <p>All coupons</p>
     </div>
     <div class="card" tabindex="0" onclick="openTable('Reviews')">
       <h2>Reviews</h2>
