--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -97,7 +97,7 @@
       <h2>Orders</h2>
       <p>Track orders & statuses</p>
     </div>
-    <div class="card" tabindex="0" onclick="openTable('Order Items')">
+    <div class="card" tabindex="0" onclick="openTable('OrderItems')">
       <h2>Order Items</h2>
       <p>View order details</p>
     </div>
@@ -116,6 +116,10 @@
     <div class="card" tabindex="0" onclick="openTable('Reviews')">
       <h2>Reviews</h2>
       <p>Customer product feedback</p>
+    </div>
+      <div class="card" tabindex="0" onclick="openTable('report')">
+      <h2>Report</h2>
+      <p>Analyse whole database</p>
     </div>
   </main>
 
