--- a/Frontend/Addresses.html
+++ b/Frontend/Addresses.html
@@ -88,7 +88,7 @@
     <input type="text" id="state" placeholder="State" required />
     <input type="number" id="postalCode" placeholder="Postal Code" required />
     <input type="text" id="country" placeholder="Country" required />
-    <input type="number" id="phone" placeholder="Phone" required />
+<input type="tel" id="phone" placeholder="Phone" pattern="^\+?\d{10,15}$" required />
    
 <button type="submit">Add</button>
   </form>
@@ -193,6 +193,7 @@
     const postal_code = document.getElementById('postalCode').value;
     const country = document.getElementById('country').value;
     const phone = document.getElementById('phone').value;
+ 
 
     try {
       const res = await fetch('https://organic-spoon-4j65vvxw9j79c5gvx-3000.app.github.dev/addAddress', {
