--- a/Frontend/OrderItems.html
+++ b/Frontend/OrderItems.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Coupons Management</title>
+  <title>Order_Items Management</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -78,62 +78,62 @@
 </head>
 <body>
 
-  <h1>Coupons / Discounts</h1>
+  <h1>Order_Items</h1>
 
-  <form id="addCouponForm" onsubmit="addNewCoupon(event)">
-    <input type="number" id="discount" placeholder="Discount %" min="1" max="100" required />
-    <input type="date" id="validFrom" required />
-    <input type="date" id="validTo" required />
-        <input type="text" id="code" placeholder="Coupon Code" required />
+  <form id="addOrderItemForm" onsubmit="addNewOrderItem(event)">
+    <input type="number" id="orderID" placeholder="Valid Order ID" required />
+    <input type="number" id="productID" placeholder="Valid Product ID" required />
+    <input type="number" id="quantity" placeholder="Quantity" required />
+        <input type="number" id="price" placeholder="Price" required />
 
-    <button type="submit">Add Coupon</button>
+    <button type="submit">Add OrderItem</button>
   </form>
 
-  <div id="loading" class="loading">Loading Coupons...</div>
+  <div id="loading" class="loading">Loading Order_Items...</div>
   <div id="error" class="error" style="display:none;"></div>
 
-  <table id="CouponsTable" style="display:none;">
+  <table id="Order_ItemsTable" style="display:none;">
     <thead>
       <tr>
-        <th>ID</th>
-        <th>Code</th>
-        <th>Discount %</th>
-        <th>Valid From</th>
-        <th>Valid To</th>
+        <th>Order Item ID</th>
+        <th>Order ID</th>
+        <th>Product ID</th>
+        <th>Quantity</th>
+        <th>Price</th>
       </tr>
     </thead>
-    <tbody id="CouponsBody"></tbody>
+    <tbody id="Order_ItemsBody"></tbody>
   </table>
 
   <script>
-    const getCouponsAPI = "https://organic-spoon-4j65vvxw9j79c5gvx-3000.app.github.dev/getData/Coupons";
-    const addCouponAPI = "https://organic-spoon-4j65vvxw9j79c5gvx-3000.app.github.dev/addCoupon";
+    const getOrder_ItemsAPI = "https://organic-spoon-4j65vvxw9j79c5gvx-3000.app.github.dev/getData/Order_Items";
+    const addOrderItemAPI = "https://organic-spoon-4j65vvxw9j79c5gvx-3000.app.github.dev/addOrderItem";
 
-    async function fetchCoupons() {
+    async function fetchOrder_Items() {
       const loadingEl = document.getElementById('loading');
       const errorEl = document.getElementById('error');
-      const table = document.getElementById('CouponsTable');
-      const tbody = document.getElementById('CouponsBody');
+      const table = document.getElementById('Order_ItemsTable');
+      const tbody = document.getElementById('Order_ItemsBody');
 
       try {
         loadingEl.style.display = 'block';
         errorEl.style.display = 'none';
         table.style.display = 'none';
 
-        const res = await fetch(getCouponsAPI);
+        const res = await fetch(getOrder_ItemsAPI);
         if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
 
-        const coupons = await res.json();
+        const Order_Items = await res.json();
         tbody.innerHTML = '';
 
-        coupons.forEach(c => {
+        Order_Items.forEach(c => {
           const tr = document.createElement('tr');
           tr.innerHTML = `
-            <td>${c.coupon_id}</td>
-            <td>${c.code}</td>
-            <td>${c.discount_percent}%</td>
-            <td>${new Date(c.valid_from).toLocaleDateString()}</td>
-            <td>${new Date(c.valid_to).toLocaleDateString()}</td>
+            <td>${c.order_item_id}</td>
+            <td>${c.order_id}</td>
+            <td>${c.product_id}</td>
+            <td>${c.quantity}</td>
+            <td>${c.price_at_purchase}</td>
           `;
           tbody.appendChild(tr);
         });
@@ -143,40 +143,41 @@
       } catch (err) {
         loadingEl.style.display = 'none';
         errorEl.style.display = 'block';
-        errorEl.textContent = 'Failed to load coupons: ' + err.message;
+        errorEl.textContent = 'Failed to load Order_Items: ' + err.message;
       }
     }
 
-    async function addNewCoupon(event) {
+    async function addNewOrderItem(event) {
       event.preventDefault();
-      const code = document.getElementById('code').value;
-      const discount = document.getElementById('discount').value;
-      const validFrom = document.getElementById('validFrom').value;
-      const validTo = document.getElementById('validTo').value;
+      const orderID = document.getElementById('orderID').value;
+      const productID = document.getElementById('productID').value;
+      const quantity = document.getElementById('quantity').value;
+      const price = document.getElementById('price').value;
 
       try {
-        const res = await fetch(addCouponAPI, {
+        const res = await fetch(addOrderItemAPI, {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
           },
           body: JSON.stringify({
-            code: code,
-            discount_percent: discount,
-            valid_from: validFrom,
-            valid_to: validTo
+            order_id: parseInt(orderID),
+            product_id: parseInt(productID),
+            quantity: quantity,
+            price_at_purchase: price
                     })
+                    
         });
 
-        if (!res.ok) throw new Error('Failed to add coupon');
-        fetchCoupons();
-        document.getElementById('addCouponForm').reset();
+        if (!res.ok) throw new Error('Failed to add OrderItem');
+        fetchOrder_Items();
+        document.getElementById('addOrderItemForm').reset();
       } catch (err) {
-        alert("Error adding coupon: " + err.message);
+        alert("Error adding OrderItem: " + err.message);
       }
     }
 
-    fetchCoupons();
+    fetchOrder_Items();
   </script>
 
 </body>
