Donegit add .git add .git add .git add .!

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -122,6 +122,16 @@
       <p>Analyse whole database</p>
     </div>
   </main>
+<footer style="margin-top: 40px; color: white; padding: 20px; text-align: center; background-color: #34495e; font-family: Arial, sans-serif;">
+  Made by 
+  <a href="www.linkedin.com/in/mka-786cs14" target="_blank" style="color: #0077b5; text-decoration: none; font-weight: bold;">
+    Kumail
+  </a> 
+  &amp; 
+  <a href="https://www.linkedin.com/in/khizar-iqbal-fazil/" target="_blank" style="color: #0077b5; text-decoration: none; font-weight: bold;">
+    Khizar
+  </a>, for Database course project 2025
+</footer>
 
   <script>
     function openTable(tableName) {
