--- a/Frontend/Coupons.html
+++ b/Frontend/Coupons.html
@@ -4,77 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Coupons Management</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 30px;
-      background: #f9fafb;
-      color: #333;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #2c3e50;
-    }
-    form {
-      max-width: 900px;
-      margin: 0 auto 30px auto;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    form input, form button {
-      padding: 10px;
-      font-size: 1rem;
-    }
-    form input {
-      flex: 1 1 200px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    form button {
-      background-color: #27ae60;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    form button:hover {
-      background-color: #219150;
-    }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      max-width: 900px;
-      margin: 0 auto;
-      background: white;
-      box-shadow: 0 8px 20px rgb(0 0 0 / 0.1);
-      border-radius: 8px;
-      overflow: hidden;
-    }
-    th, td {
-      padding: 12px 15px;
-      border-bottom: 1px solid #ddd;
-      text-align: left;
-    }
-    th {
-      background-color: #2980b9;
-      color: white;
-    }
-    tr:hover {
-      background-color: #f1f7ff;
-    }
-    .loading, .error {
-      max-width: 900px;
-      margin: 20px auto;
-      text-align: center;
-      font-size: 1.1rem;
-    }
-    .error {
-      color: red;
-    }
-  </style>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
