--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,74 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>E-commerce Dashboard</title>
-<style>
-  * {
-    box-sizing: border-box;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>E-commerce Dashboard</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #f5f7fa;
-    margin: 0;
-    padding: 20px;
-    color: #222;
-  }
+    body {
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+      background-color: #fdfcfa;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
 
-  header {
-    text-align: center;
-    margin-bottom: 30px;
-  }
+    header {
+      background-color: #f9a826;
+      color: #fff;
+      padding: 30px 20px;
+      text-align: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
 
-  header h1 {
-    font-weight: 700;
-    font-size: 2.5rem;
-    color: #2c3e50;
-  }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
 
-  .dashboard {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    gap: 20px;
-    max-width: 900px;
-    margin: 0 auto;
-  }
+    header p {
+      margin-top: 10px;
+      font-size: 1rem;
+      color: #fffce8;
+    }
 
-  .card {
-    background: white;
-    border-radius: 12px;
-    padding: 30px 20px;
-    box-shadow: 0 8px 16px rgb(0 0 0 / 0.1);
-    cursor: pointer;
-    text-align: center;
-    transition: transform 0.15s ease, box-shadow 0.15s ease;
-    user-select: none;
-  }
+    main.dashboard {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      padding: 40px 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
 
-  .card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 12px 20px rgb(0 0 0 / 0.15);
-  }
+    .card {
+      background-color: #ffffff;
+      border-radius: 16px;
+      padding: 25px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      text-align: center;
+      transition: all 0.2s ease-in-out;
+      cursor: pointer;
+      border: 2px solid transparent;
+    }
 
-  .card h2 {
-    font-size: 1.25rem;
-    margin-bottom: 10px;
-    color: #34495e;
-  }
+    .card:hover {
+      transform: translateY(-6px);
+      border-color: #f9a826;
+      box-shadow: 0 12px 24px rgba(249, 168, 38, 0.2);
+    }
 
-  .card p {
-    font-size: 0.9rem;
-    color: #7f8c8d;
-  }
+    .card h2 {
+      font-size: 1.2rem;
+      color: #f57c00;
+      margin-bottom: 10px;
+    }
 
-  /* Optional: make cards focusable for keyboard users */
-  .card:focus {
-    outline: 3px solid #2980b9;
-    outline-offset: 3px;
-  }
-</style>
+    .card p {
+      font-size: 0.95rem;
+      color: #616161;
+    }
+
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      text-align: center;
+      background-color: #f9a826;
+      color: white;
+      font-size: 0.95rem;
+    }
+
+    footer a {
+      color: #fff;
+      text-decoration: underline;
+      font-weight: bold;
+    }
+
+    footer a:hover {
+      text-decoration: none;
+      color: #333;
+      background-color: white;
+      padding: 2px 6px;
+      border-radius: 5px;
+      transition: all 0.2s ease;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -117,25 +145,23 @@
       <h2>Reviews</h2>
       <p>Customer product feedback</p>
     </div>
-      <div class="card" tabindex="0" onclick="openTable('report')">
+    <div class="card" tabindex="0" onclick="openTable('report')">
       <h2>Report</h2>
       <p>Analyse whole database</p>
     </div>
   </main>
-<footer style="margin-top: 40px; color: white; padding: 20px; text-align: center; background-color: #34495e; font-family: Arial, sans-serif;">
-  Made by 
-  <a href="www.linkedin.com/in/mka-786cs14" target="_blank" style="color: #0077b5; text-decoration: none; font-weight: bold;">
-    Kumail
-  </a> 
-  &amp; 
-  <a href="https://www.linkedin.com/in/khizar-iqbal-fazil/" target="_blank" style="color: #0077b5; text-decoration: none; font-weight: bold;">
-    Khizar
-  </a>, for Database course project 2025
-</footer>
+
+  <footer>
+    Made by 
+    <a href="https://www.linkedin.com/in/mka-786cs14" target="_blank">Kumail</a> 
+    &amp; 
+    <a href="https://www.linkedin.com/in/khizar-iqbal-fazil/" target="_blank">Khizar</a>, 
+    for Database course project 2025
+  </footer>
 
   <script>
     function openTable(tableName) {
-      window.location.href=`${tableName}.html`;
+      window.location.href = `${tableName}.html`;
     }
   </script>
   <script src="./JS/index.js"></script>
