--- a/Frontend/Coupons.html
+++ b/Frontend/Coupons.html
@@ -15,7 +15,7 @@
     <input type="number" id="discount" placeholder="Discount %" min="1" max="100" required />
     <input type="date" id="validFrom" required />
     <input type="date" id="validTo" required />
-        <input type="text" id="code" placeholder="Coupon Code" required />
+        <input type="number" id="code" placeholder="Coupon Code" required />
 
     <button type="submit">Add Coupon</button>
   </form>
